[project]
name = "labyr"
version = "0.5.3"
description = "A labyrinth game."
authors = [
    {name = "sigmacodeslol", email = "tcrrxzz@gmail.com"}
]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "colorama"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
labyr = "labyr.__main__:main"

[project.urls]
Repository = "https://github.com/sigmacodeslol/labyr.git"


[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"
