[project]
name = "labyr"
version = "0.8.1"
description = "A labyrinth game."
authors = [
    {name = "sigmacodeslol", email = "tcrrxzz@gmail.com"}
]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "colorama"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
labyr = "labyr.__main__:main"

[project.urls]
Repository = "https://github.com/sigmacodeslol/labyr.git"


[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"
